--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,8 @@
         "test": "phpunit"
     },
     "require-dev": {
+        "php-coveralls/php-coveralls": "^2.1",
+        "phpunit/phpcov": "^3.0", 
         "zendframework/zend-developer-tools": "^1.2",
         "zendframework/zend-test": "^3.2"
     }
