--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,12 @@
     "prefer-stable": true,
     "require": {
         "php": "^5.6",
+        "components/font-awesome": "^5.4",
+        "components/jquery": "^3.3",
+        "doctrine/orm": "^2.5",
+        "twbs/bootstrap": "^4.2",
         "zendframework/zend-component-installer": "^1.0 || ^0.7",
+        "zendframework/zend-form": "^2.13",
         "zendframework/zend-mvc": "^3.0.1",
         "zfcampus/zf-development-mode": "^3.0"
     },
@@ -21,13 +26,25 @@
             "ApplicationTest\\": "module/Application/test/"
         }
     },
+    "config": {
+        "sort-packages": true
+    }, 
     "extra": [],
     "scripts": {
         "development-disable": "zf-development-mode disable",
         "development-enable": "zf-development-mode enable",
         "development-status": "zf-development-mode status",
         "serve": "php -S 0.0.0.0:8080 -t public public/index.php",
-        "test": "phpunit"
+        "test": "phpunit",
+        "asset-install": [
+            "Application\\Asset::install"
+        ],
+        "post-install-cmd": [
+            "@asset-install"
+        ],
+        "post-update-cmd": [
+            "@asset-install"
+        ] 
     },
     "require-dev": {
         "php-coveralls/php-coveralls": "^2.1",
