--- a/.coveralls.yml
+++ b/.coveralls.yml
@@ -1,3 +1,3 @@
 service_name: travis-ci
-coverage_clover: data/cache/cover/clover.xml
+coverage_clover: coverage.xml
 json_path: data/cache/cover/coveralls-upload.json
