--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 dist: trusty
 language: php
 
+env:
+  - CODECOV_TOKEN="3d1735ac-5e08-4abc-986d-c88adaf77154"
+
 php:
   - 5.6
 
@@ -12,6 +15,7 @@ script:
 
 after_success:
   - travis_retry vendor/bin/php-coveralls
+  - bash <(curl -s https://codecov.io/bash)
 
 notifications:
   email: false
