--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "php": "^5.6",
         "components/font-awesome": "^5.4",
         "components/jquery": "^3.3",
-        "doctrine/orm": "^2.5",
+        "doctrine/doctrine-orm-module": "^1.1",
         "twbs/bootstrap": "^4.2",
         "zendframework/zend-component-installer": "^1.0 || ^0.7",
         "zendframework/zend-form": "^2.13",
