create tables before loading fixtures (for travis)

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ php:
 before_install:
   - composer install
   - cp config/autoload/doctrine.sqlite.local.php.dist config/autoload/doctrine.local.php
+  - vendor/bin/doctrine-module orm:schema-tool:create
   - composer fixtures-load
 
 script:
