--- a/config/development.config.php.dist
+++ b/config/development.config.php.dist
@@ -16,4 +16,7 @@ return [
         'config_cache_enabled' => false,
         'module_map_cache_enabled' => false,
     ],
+    'view_manager' => [
+        'display_exceptions' => true,
+    ],
 ];
